--- a/style.css
+++ b/style.css
@@ -5,11 +5,13 @@ Commentaires
 
 p
 {
-	font-size: 14px;
+	font-size: 0.8em;
+	font-family: Impact;
 }
 h1
 {
-	font-size: 40px;
+	font-size: 1.3em;
+	font-family: Comic Sans Ms
 }
 
 
